Fix navigation buttons spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -236,10 +236,11 @@ button[type=submit]:hover {
 
 .navigation {
     padding-top: 10px;
+    display: inline-block;
 }
 
 .navigation a {
-    /* float: left; */
+    float: left;
     padding: 8px 12px 7px 12px;
     margin: 0;
     background: #C3C3C3;
